gcpkubernetessecretandCertificatemanagerProject/db1.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: database
spec:
  serviceName: postgres
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16

        ports:
        - containerPort: 5432

        volumeMounts:
        - name: dbdata
          mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
  - metadata:
      name: dbdata
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
