gcpkubernetessecretandCertificatemanagerProject/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "gce"  # Use GCP Ingress controller
    networking.gke.io/managed-certificates: "nginx-selfsigned"  # Certificate Manager reference
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
